--- a/src/style.css
+++ b/src/style.css
@@ -109,8 +109,9 @@ body h1{
     "img7 img8 img9"
   }
 #index-gallery .gallery-img{
-    width: 100%;
-    height: 300px;
+    max-width: 600px;
+    width: 5%;
+    height: 50%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -128,6 +129,7 @@ body h1{
 #index-gallery .img1{
     grid-area: img1;
     background-image: url("images/img1.jpg");
+    max-width: 500px;
 }
 
 #index-gallery .img2{
@@ -175,7 +177,7 @@ body h1{
 /* GAllery image titles */
 
 .gallery-img div {
-    width: 100%;
+    width: 0.5%;
     height: 100%;
     background-color: #000000;
     opacity: 0;
