--- a/src/Components/Movies.css
+++ b/src/Components/Movies.css
@@ -21,3 +21,16 @@ header h1 {
 	transition: all ease-in-out 100ms;
 	filter: alpha(opacity=40);
 }
+
+button {
+	padding: 10px 20px;
+	margin: 5px;
+	border-radius: 5px;
+	background-color: #3498DB   ;
+	color: #fff;
+
+}
+
+.dropdown {
+	background-color: #3498DB;
+}
